# django-storages

./: .coveragerc  .git-blame-ignore-revs  .gitignore  .hgignore  .readthedocs.yaml  .travis.yml  AUTHORS  CHANGELOG.rst  FTPStorage.py  ImageStorage.py  LICENSE  MANIFEST.in  MogileFSStorage.py  README  README.rst  S3.py  S3BotoStorage.py  S3Storage.py  conftest.py  django-mogilefs-storage.txt  manage.py  pyproject.toml  pytest.ini  requirements-tests.txt  requirements.txt  ruff.toml  setup.cfg  setup.py  tests.py  tox.ini
.github/: FUNDING.yml
.github/workflows/: ci.yml
backends/: FTPStorage.py  MogileFSStorage.py  OverwriteStorage.py  S3BotoStorage.py  S3Storage.py  couchdb.py  database.py  ftp.py  image.py  mogile.py  mosso.py  s3.py  s3boto.py  symlinkorcopy.py
docs/: Makefile  conf.py  django-mogilefs-storage.txt  index.rst  make.bat  requirements.txt
docs/backends/: IBM-Cloud-Object-Storage.rst  alibaba-oss.rst  amazon-S3.rst  apache_libcloud.rst  azure.rst  backblaze-B2.rst  couchdb.rst  database.rst  digital-ocean-spaces.rst  dropbox.rst  filesystem.rst  ftp.rst  gcloud.rst  image.rst  linode.rst  mogilefs.rst  mongodb.rst  oracle-cloud.rst  overwrite.rst  qingstor.rst  rackspace-cloudfiles.rst  scaleway.rst  sftp.rst  symlinkcopy.rst
docs/backends/s3_compatible/: backblaze-B2.rst  cloudflare-r2.rst  digital-ocean-spaces.rst  index.rst  oracle-cloud.rst  scaleway.rst
examples/cloudfiles_project/: settings.py  urls.py
examples/cloudfiles_project/photos/: admin.py  models.py
examples/cloudfiles_project/templates/: base.html
examples/cloudfiles_project/templates/photos/: photo_list.html
examples/libcloud_project/: settings.py  test_storage.py  urls.py
examples/s3project/: manage.py  models.py  settings.py  tests.py
storages/: S3.py  __init__.py  base.py  compat.py  compress.py  models.py  tempfile.py  time.py  utils.py
storages/backends/: apache_libcloud.py  azure.py  azure_storage.py  azure_storage03.py  azure_storage1.py  base.py  couchdb.py  custom_domain_s3boto3.py  database.py  do_spaces.py  dropbox.py  filesystem.py  ftp.py  gcloud.py  google.py  gs.py  hashpath.py  ibm_cos.py  image.py  mogile.py  mongodb.py  mosso.py  multi.py  overwrite.py  qingstor.py  s3.py  s3boto.py  s3boto3.py  sftp.py  sftpstorage.py  symlinkorcopy.py
storages/management/commands/: store_media.py
storages/tests/: __init__.py  hashpath.py  s3boto.py
storages_tests/: manage.py  models.py  tests.py
tests/: runtests.py  settings.py  test_apache_libcloud.py  test_azure.py  test_clean_name.py  test_clean_name_standalone.py  test_custom_domain_s3boto3.py  test_do_spaces.py  test_dropbox.py  test_filesystem.py  test_ftp.py  test_gcloud.py  test_gs.py  test_ibmcos.py  test_libcloud.py  test_libcloud_standalone.py  test_libcloud_url.py  test_multi.py  test_qingstor.py  test_read_bytes_wrapper.py  test_s3.py  test_s3boto.py  test_s3boto3.py  test_sftp.py  test_time.py  test_utils.py  utils.py
tests/integration/: models.py  settings.py  test_azure.py
tests/integration/migrations/: 0001_initial.py
tests/test_files/: windows-1252-encoded.txt
