[metadata]
name = django-storages
version = attr: storages.__version__
description = Support for many storage backends in Django
long_description = file: README.rst, CHANGELOG.rst
license = BSD-3-Clause
author = Josh Schneier
author_email = josh.schneier@gmail.com
url = https://github.com/jschneier/django-storages
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
zip_safe=False
python_requires = >=3.5
install_requires =
    Django >= 2.2
packages =
    storages
    storages.backends

[options.extras_require]
azure =
    azure-storage-blob >=1.3.1,<12.0.0
boto3 =
    boto3 >= 1.4.4
dropbox =
    dropbox >= 7.2.1
google =
    google-cloud-storage >= 1.15.0
libcloud =
    apache-libcloud
sftp =
    paramiko

[flake8]
exclude =
    .tox,
    docs
max-line-length = 119

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
known_first_party = storages
line_length = 79
multi_line_output = 5
