[metadata]
name = django-storages
version = attr: storages.__version__
description = Support for many storage backends in Django
long_description = file: README.rst, CHANGELOG.rst
license = BSD-3-Clause
author = Josh Schneier
author_email = josh.schneier@gmail.com
url = https://github.com/jschneier/django-storages
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe=False
python_requires = >=3.7
install_requires =
    Django>=3.2
packages =
    storages
    storages.backends

[options.extras_require]
azure =
    azure-storage-blob >= 12.0.0
boto3 =
    boto3 >= 1.4.4
dropbox =
    dropbox >= 7.2.1
google =
    google-cloud-storage >= 1.27.0
libcloud =
    apache-libcloud
sftp =
    paramiko >= 1.10.0

[flake8]
exclude =
    .tox,
    docs,
    venv
max-line-length = 119

[isort]
force_single_line = true
default_section = THIRDPARTY
include_trailing_comma = true
known_first_party = storages
line_length = 119
